210410 kakao_login 로그인 후 토큰 받고 정보 받아오기까지 완료.

--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org"> <head>
+<html>
+<head>
     <title>Hello</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> </head>
 <body>
+<p text="안녕하세요." >안녕하세요. 손님</p>
 </body>
 </html>
