--- a/src/main/resources/templates/kakao_login.html
+++ b/src/main/resources/templates/kakao_login.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th = "www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+
 <h1>Kakao Login!</h1>
-<a href="/login">
-    <img src="//mud-kage.kakao.com/14/dn/btqbjxsO6vP/KPiGpdnsubSq3a0PHEGUK1/o.jpg" width="300"/>
-</a>
-<br>
-<a href="/logout">로그아웃</a>
+<button id = "loginButton">로그인</button>
 </body>
+
+<script>
+    function addEventListenerToButton(){
+        const loginButton = document.getElementById("loginButton");
+
+        loginButton.onclick = function (){
+            window.location.href = ''
+        }
+    }
+</script>
 </html>
