--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -6,8 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<span th:text="${session.userId}"></span>
-
+<h2>Welcome!</h2>
 </body>
 
 </html>
