--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> </head>
 <body>
     <h1>Home</h1>
-    <a th:href="@{/login}">로그인 페이지로 이동</a>
+    <a th:href="@{/login}">로그인 페이지로 이동sd</a>
     <div class="container" ng-show="home.authenticated"> Logged in as:
         <span ng-bind="home.user"></span>
         <div>
