랜딩 페이지 완성

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,9 +61,9 @@
 <h1 style="color: aliceblue; text-align: center; margin-top: 20px;font-size: 13px;">음악, 무용, 미술, 전통, 다원 등 다양한 분야의 예술인들과 <br>예술활동을 공유하며 소통해보세요.</h1>
 
     <br>
-<img src="./css/img/무용부터 전통예술.PNG" alt="" style="width: 400px;">
-<img src="./css/img/전자음악부터 영상아트.PNG" alt="" style="width: 400px;">
-<img src="./css/img/감독부터 작가.PNG" alt="" style="width: 400px;">
+<img src="./css/img/무용부터 전통예술.PNG" alt="" style="width: 350px;">
+<img src="./css/img/전자음악부터 영상아트.PNG" alt="" style="width: 350px;">
+<img src="./css/img/감독부터 작가.PNG" alt="" style="width: 350px;">
 
 
 
@@ -72,24 +72,11 @@
    </section>
 
 <section class="course">
-
-        <h2>예술을 위한 <br>아티스트 소셜 네트워크</h2>
-        <h3>#활동공유 #팀 빌딩 #협업</h3><br>
-        <i class="fas fa-network-wired" style="font-size: 50px;"><br></i>
-        <h3>아티스트 소셜 네트워크</h3>
-        <p>음악, 무용, 미술, 전통, 다원 등 다양한 분야의 예술인들과 예술활동을 공유하며 소통해보세요.</p>
-        <br>
-        <i class="fab fa-instagram" style="font-size: 50px;"></i>
-        <h3>인스타그램 프로필</h3>
-        <p>인스타그램 계정의 활동 피드로 아티스트 인증하고<br>따로 연락처, 프로필 작성없이<br>인스타그램으로 간단하게</p>
-        <br>
-        <i class="fas fa-handshake" style="font-size: 50px;"></i>
-        <h3>협업 & 팀 빌딩</h3>
-        <p>수수료 걱정없이<br>아티스트를 직접 찾거나 모집하세요</p>
-        <br>
-        <i class="fab fa-youtube" style="font-size: 50px;"></i>
-        <h3>4RT 프로젝트</h3>
-<p>수수료 걱정없이<br>아티스트를 직접 찾거나 모집하세요</p>
+        <img src="./css/img/협업 앤 팀 빌딩.png" alt="" style="width: 350px; margin-left: -40px;"><br><br><br>
+        <img src="./css/img/123.png" alt="" style="width: 350px;margin-left: -40px;"><br><br><br><br>
+        <img src="./css/img/키워드 검색.png" alt="" style="width: 350px;margin-left: -40px;"><br><br><br><br>
+        <img src="./css/img/게시글 업로드.png" alt="" style="width: 350px;margin-left: -40px;">
+       <br><br><br>
 
    
 </section>
