--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="id=edge">
+    <meta http-equiv="X-UA-Compatible" content="id=edge" charset="UTF-8">
     <meta name="google-signin-client_id" content="472013528031-d4ir5hi3gtjfnmi91telttj4h2das46v.apps.googleusercontent.com">
     <title>4RT | Landing-page</title>
-    <link rel="stylesheet" href="css/landing-page.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/landing-page.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script type="text/javascript" src="./jquery.lettering.js"></script>
@@ -36,10 +36,10 @@
 <h1 style="color: gray; margin-left: 50px; font-size: 12px;">다양한 아티스트와 소통하며 예술활동을 공유하고, 협업해보세요. </h1>
     
     <br>
-<a href="javascript:;" class="btn_social" data-social="facebook" style="margin-left: 109px; text-decoration: none;"><img src="./css/img/페이스북로그인.png" alt="" style="width: 250px;"></a><br/><br>
-<a href="javascript:;" class="btn_social" data-social="google"style="margin-left: 100px;text-decoration: none;"><img src="./css/img/구글로그인.png" alt="" style="width: 250px;"></a><br/><br>
-<a href="javascript:;" class="btn_social" data-social="kakao"style="margin-left: 100px;text-decoration: none;"><img src="./css/img/카카오로그인.png" alt="" style="width: 250px;"></a><br/><br>
-<a href="javascript:;" class="btn_social" data-social="naver"style="margin-left: 110px;text-decoration: none;"><img src="./css/img/네이버로그인.png" alt="" style="width: 250px;"></a><br/>
+<a href="javascript:;" class="btn_social" data-social="facebook" style="margin-left: 109px; text-decoration: none;"><img src="../static/css/img/페이스북로그인.png" alt="" style="width: 250px;"></a><br/><br>
+<a href="javascript:;" class="btn_social" data-social="google"style="margin-left: 100px;text-decoration: none;"><img src="../static/css/img/구글로그인.png" alt="" style="width: 250px;"></a><br/><br>
+<a href="javascript:;" class="btn_social" data-social="kakao"style="margin-left: 100px;text-decoration: none;"><img src="../static/css/img/카카오로그인.png" alt="" style="width: 250px;"></a><br/><br>
+<a href="javascript:;" class="btn_social" data-social="naver"style="margin-left: 110px;text-decoration: none;"><img src="../static/css/img/네이버로그인.png" alt="" style="width: 250px;"></a><br/>
 <br>
 <script>
     let socials = document.getElementsByClassName("btn_social");
@@ -61,9 +61,9 @@
 <h1 style="color: aliceblue; text-align: center; margin-top: 20px;font-size: 13px;">음악, 무용, 미술, 전통, 다원 등 다양한 분야의 예술인들과 <br>예술활동을 공유하며 소통해보세요.</h1>
 
     <br>
-<img src="./css/img/무용부터 전통예술.PNG" alt="" style="width: 350px;">
-<img src="./css/img/전자음악부터 영상아트.PNG" alt="" style="width: 350px;">
-<img src="./css/img/감독부터 작가.PNG" alt="" style="width: 350px;">
+<img src="../static/css/img/무용부터 전통예술.PNG" alt="" style="width: 350px;">
+<img src="../static/css/img/전자음악부터 영상아트.PNG" alt="" style="width: 350px;">
+<img src="../static/css/img/감독부터 작가.PNG" alt="" style="width: 350px;">
 
 
 
@@ -72,10 +72,10 @@
    </section>
 
 <section class="course">
-        <img src="./css/img/협업 앤 팀 빌딩.png" alt="" style="width: 350px; margin-left: -40px;"><br><br><br>
-        <img src="./css/img/123.png" alt="" style="width: 350px;margin-left: -40px;"><br><br><br><br>
-        <img src="./css/img/키워드 검색.png" alt="" style="width: 350px;margin-left: -40px;"><br><br><br><br>
-        <img src="./css/img/게시글 업로드.png" alt="" style="width: 350px;margin-left: -40px;">
+        <img src="../static/css/img/협업 앤 팀 빌딩.png" alt="" style="width: 350px; margin-left: -40px;"><br><br><br>
+        <img src="../static/css/img/123.png" alt="" style="width: 350px;margin-left: -40px;"><br><br><br><br>
+        <img src="../static/css/img/키워드 검색.png" alt="" style="width: 350px;margin-left: -40px;"><br><br><br><br>
+        <img src="../static/css/img/게시글 업로드.png" alt="" style="width: 350px;margin-left: -40px;">
        <br><br><br>
 
    
