--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
                 margin-top: 80px;
                 font-size: 22px;
                 margin-left: 20px;
-                font-weight: bold;">예술을 위한<br><br>아티스트 소셜 네트워크</h3><br>
+                font-weight: bold;">d예술을 위한<br><br>아티스트 소셜 네트워크</h3><br>
 
                 
            
