--- a/src/main/resources/templates/css/landing-page.css
+++ b/src/main/resources/templates/css/landing-page.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-   
+   width: 390px;
 }
 
 
@@ -132,10 +132,13 @@ nav .fa{
 }
 
 .course{
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    padding-top: 100px;
+    min-height: 100vh;
+    width: 100%;
+    background-color: white;
+    background-position: center;
+    background-size: cover;
+    margin-top: 58px 0 0;
+    padding: 30px 0 38px;
 }
 
 h1{
@@ -148,6 +151,7 @@ p{
     font-weight: 300;
     line-height: 22px;
     padding: 10px;
+    position: relative;
 }
 
 .row{
