--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="id=edge">
     <meta name="google-signin-client_id" content="472013528031-d4ir5hi3gtjfnmi91telttj4h2das46v.apps.googleusercontent.com">
     <title>4RT | Landing-page</title>
-    <link rel="stylesheet" href="css/landing-page.css">
+    <link rel="stylesheet" href="../static/css/landing-page.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script type="text/javascript" src="./jquery.lettering.js"></script>
@@ -58,10 +58,10 @@ color: #ffffff;">4RT</h1>
 <h1 style="color: gray; width: 350px; font-size: 10px; text-align: left; margin-left: 0px; font-family: 'Nanum Gothic';">다양한 아티스트와 소통하며 예술활동을 공유하고, 협업해보세요. </h1>
     
     <br>
-<a href="javascript:;" class="btn_social" data-social="facebook" style=" text-decoration: none;"><img src="./css/img/페이스북로그인.png" alt="" style="width: 250px;"></a><br/><br>
-<a href="javascript:;" class="btn_social" data-social="google"style="margin-left: -15px; text-decoration: none;"><img src="./css/img/구글로그인.png" alt="" style="width: 250px;"></a><br/><br>
-<a href="javascript:;" class="btn_social" data-social="kakao"style="margin-left: -15px; text-decoration: none;"><img src="./css/img/카카오로그인.png" alt="" style="width: 250px;"></a><br/><br>
-<a href="javascript:;" class="btn_social" data-social="naver"style="text-decoration: none;"><img src="./css/img/네이버로그인.png" alt="" style="width: 250px;"></a><br/>
+<a href="javascript:;" class="btn_social" data-social="facebook" style=" text-decoration: none;"><img src="../static/css/img/페이스북로그인.png" alt="" style="width: 250px;"></a><br/><br>
+<a href="javascript:;" class="btn_social" data-social="google"style="margin-left: -15px; text-decoration: none;"><img src="../static/css/img/구글로그인.png" alt="" style="width: 250px;"></a><br/><br>
+<a href="javascript:;" class="btn_social" data-social="kakao"style="margin-left: -15px; text-decoration: none;"><img src="../static/css/img/카카오로그인.png" alt="" style="width: 250px;"></a><br/><br>
+<a href="javascript:;" class="btn_social" data-social="naver"style="text-decoration: none;"><img src="../static/css/img/네이버로그인.png" alt="" style="width: 250px;"></a><br/>
 <br>
 <script>
     let socials = document.getElementsByClassName("btn_social");
@@ -95,7 +95,7 @@ line-height: normal;
 letter-spacing: normal;
 text-align: center;
 color: #aaaaaa;">회원가입 시 <a href="#">이용약관</a> 및 <a href="#">개인정보처리방침</a>에 동의하게 됩니다.</h1>
-<img src="./css/img/ICON_2021-05-19/ICON.png" alt="" style="width: 60px;
+<img src="../static/css/img/ICON_2021-05-19/ICON.png" alt="" style="width: 60px;
 height: 60px;
 margin: 0 130px 10px;
 object-fit: contain;">
@@ -129,11 +129,11 @@ text-align: center;
 color: #ffffff94;">음악, 무용, 미술, 전통, 다원 등 다양한 분야의 예술인들과 <br>예술활동을 공유하며 소통해보세요.</h1>
 
     <br>
-<img src="./css/img/무용.png" alt="" style="width: 154px;
+<img src="../static/css/img/무용.png" alt="" style="width: 154px;
 height: 154px;
 margin: 0 0 10px;
 object-fit: contain;">
-<img src="./css/img/첼로.png" alt="" style="width: 154px;
+<img src="../static/css/img/첼로.png" alt="" style="width: 154px;
 height: 154px;
 margin: 0 0 10px 42px;
 object-fit: contain;
@@ -166,11 +166,11 @@ color: #ffffff;">#클래식 #첼로 #현대음악</p>
 
 
 
-<img src="./css/img/댄스.png" alt="" style="width: 154px;
+<img src="../static/css/img/댄스.png" alt="" style="width: 154px;
 height: 154px;
 margin: 0 0 10px;
 object-fit: contain;">
-<img src="./css/img/싱어송라이터.png" alt="" style="width: 154px;
+<img src="../static/css/img/싱어송라이터.png" alt="" style="width: 154px;
 height: 154px;
 margin: 0 0 10px 42px;
 object-fit: contain;
@@ -204,11 +204,11 @@ color: #ffffff;">#싱어송라이터 #인디</p>
 
 
 
-<img src="./css/img/작곡.png" alt="" style="width: 154px;
+<img src="../static/css/img/작곡.png" alt="" style="width: 154px;
 height: 154px;
 margin: 0 0 10px;
 object-fit: contain;">
-<img src="./css/img/거문고.png" alt="" style="width: 154px;
+<img src="../static/css/img/거문고.png" alt="" style="width: 154px;
 height: 154px;
 margin: 0 0 10px 42px;
 object-fit: contain;
@@ -240,11 +240,11 @@ color: #ffffff;">#전통예술 #국악 #거문고</p>
 
 
 
-<img src="./css/img/전자음악.png" alt="" style="width: 154px;
+<img src="../static/css/img/전자음악.png" alt="" style="width: 154px;
 height: 154px;
 margin: 0 0 10px;
 object-fit: contain;">
-<img src="./css/img/설치.png" alt="" style="width: 154px;
+<img src="../static/css/img/설치.png" alt="" style="width: 154px;
 height: 154px;
 margin: 0 0 10px 42px;
 object-fit: contain;
@@ -277,11 +277,11 @@ color: #ffffff;">#설치 #시각 #다원예술</p>
 
 
 
-<img src="./css/img/미술.png" alt="" style="width: 154px;
+<img src="../static/css/img/미술.png" alt="" style="width: 154px;
 height: 154px;
 margin: 0 0 10px;
 object-fit: contain;">
-<img src="./css/img/패션아트.png" alt="" style="width: 154px;
+<img src="../static/css/img/패션아트.png" alt="" style="width: 154px;
 height: 154px;
 margin: 0 0 10px 42px;
 object-fit: contain;
@@ -314,11 +314,11 @@ color: #ffffff;">#패션아트</p>
 
 
 
-<img src="./css/img/공예.png" alt="" style="width: 154px;
+<img src="../static/css/img/공예.png" alt="" style="width: 154px;
 height: 154px;
 margin: 0 0 10px;
 object-fit: contain;">
-<img src="./css/img/영상아트.png" alt="" style="width: 154px;
+<img src="../static/css/img/영상아트.png" alt="" style="width: 154px;
 height: 154px;
 margin: 0 0 10px 42px;
 object-fit: contain;
@@ -349,11 +349,11 @@ float: left;
 color: #ffffff;">#영상아트 #포토그래퍼</p>
 
 
-<img src="./css/img/감독.png" alt="" style="width: 154px;
+<img src="../static/css/img/감독.png" alt="" style="width: 154px;
 height: 154px;
 margin: 0 0 10px;
 object-fit: contain;">
-<img src="./css/img/작가.png" alt="" style="width: 154px;
+<img src="../static/css/img/작가.png" alt="" style="width: 154px;
 height: 154px;
 margin: 0 0 10px 42px;
 object-fit: contain;
@@ -391,7 +391,7 @@ object-fit: contain;
    </section>
 
 <section class="course">
-        <img src="./css/img/ICON_2021-05-19 (1)/ICON@3x.png" alt="" style=" width: 60px;
+        <img src="../static/css/img/ICON_2021-05-19 (1)/ICON@3x.png" alt="" style=" width: 60px;
         height: 60px;
         object-fit: contain;">
 
@@ -418,19 +418,19 @@ object-fit: contain;
         text-align: center;
         color: #333333;">수수료 걱정없이 <br>아티스트를 직접 찾거나 모집해보세요.</p>
 
-<img src="./css/img/해시태그검색_2021-05-20/해시태그검색@3x.png" alt="" style="width: 370px;
+<img src="../static/css/img/해시태그검색_2021-05-20/해시태그검색@3x.png" alt="" style="width: 370px;
 height: 236px;
 margin: 55px 0 55px -10px;
 object-fit: contain;
 ">
 
-<img src="./css/img/키워드검색_2021-05-20/키워드검색@3x.png" alt="" style=" width: 370px;
+<img src="../static/css/img/키워드검색_2021-05-20/키워드검색@3x.png" alt="" style=" width: 370px;
 height: 236px;
 margin: 55px 20px 55px 0;
 object-fit: contain;
 ">
 
-<img src="./css/img/게시글업로드_2021-05-20/게시글업로드@3x.png" alt="" style="width: 370px;
+<img src="../static/css/img/게시글업로드_2021-05-20/게시글업로드@3x.png" alt="" style="width: 370px;
 height: 491px;
 margin: 55px 0 0 -10px;
 object-fit: contain;">
