--- a/src/main/resources/static/css/landing-page.css
+++ b/src/main/resources/static/css/landing-page.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-   
+    width: 390px;
 }
 
 
@@ -31,7 +31,7 @@ nav img{
     text-align: right;
 }
 .nav-links ul li{
- 
+
 
     list-style: none;
     display: inline-block;
@@ -132,10 +132,13 @@ nav .fa{
 }
 
 .course{
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    padding-top: 100px;
+    min-height: 100vh;
+    width: 100%;
+    background-color: white;
+    background-position: center;
+    background-size: cover;
+    margin-top: 58px 0 0;
+    padding: 30px 0 38px;
 }
 
 h1{
@@ -148,6 +151,7 @@ p{
     font-weight: 300;
     line-height: 22px;
     padding: 10px;
+    position: relative;
 }
 
 .row{
@@ -181,7 +185,7 @@ h3{
     position: relative;
     height: 50px;
     overflow: hidden;
-    
+
 }
 .form input{
     width: 100%;
@@ -220,7 +224,7 @@ h3{
     transition: all 0.3s ease;
 }
 
-.form input:focus + .label-name .content-name, 
+.form input:focus + .label-name .content-name,
 .form input:valid + .label-name .content-name{
     transform: translateY(-150%);
     font-size: 14px;
@@ -253,5 +257,3 @@ ul li{
     letter-spacing: 15px;
     animation: animate 2.0s linear infinite;
 }
-
-
