--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,10 +7,6 @@
     <meta name="google-signin-client_id" content="472013528031-d4ir5hi3gtjfnmi91telttj4h2das46v.apps.googleusercontent.com">
     <title>4RT | Landing-page</title>
     <link rel="stylesheet" href="../static/css/landing-page.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-    <script type="text/javascript" src="./jquery.lettering.js"></script>
-    <script type="text/javascript" src="./circletype.min.js"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800');
@@ -77,7 +73,7 @@ color: #ffffff;">4RT</h1>
 
 
         <hr style="width: 316px;
-height: px;
+height: 0px;
 margin: 39px 37px 14px;
 background-color: #aaaaaa;">
 
