--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -20,8 +20,52 @@
 
 </head>
 
-<body style="background-color: black; color: white;">
+<body style="background-color: black; color: white; width: 390px;">
+
+    <p style=" width: 350px;
+        height: 25px;
+        margin: 55px 1px 61px 20px;
+        font-family: 'Nanum Gothic';
+        font-size: 22px;
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        text-align: left;
+        color: #ffffff;">
+        회원가입
+    </p>
+    <p style=" width: 350px;
+    height: 25px;
+    margin: 61px 1px 9px 20px;
+    font-family: 'NanumGothic';
+    font-size: 22px;
+    font-weight: bold;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #ffffff;">아티스트 회원</p>
+    <hr style="width: 350px;
+         height: 2px;
+         margin: 9px 1px 9px 20px;
+         background-color: #ededed;">
+         <p style=" width: 350px;
+         height: 14px;
+         margin: 9px 1px 10px 20px;
+         font-family: 'NanumGothic';
+         font-size: 12px;
+         font-weight: normal;
+         font-stretch: normal;
+         font-style: normal;
+         line-height: normal;
+         letter-spacing: normal;
+         text-align: left;
+         color: #ffffff;">4RT를 이용하기 위해서 인스타그램 계정을 등록하셔야 합니다.</p>
     <center>
+   
         <h2 th:text = "${dd}"></h2> <!--dd를 회원가입으로-->
         
 
