--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,9 +7,12 @@
     <meta name="google-signin-client_id" content="472013528031-d4ir5hi3gtjfnmi91telttj4h2das46v.apps.googleusercontent.com">
     <title>4RT | Landing-page</title>
     <link rel="stylesheet" href="../static/css/landing-page.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800');
+
 
     </style>
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700" rel="stylesheet">
@@ -19,17 +22,17 @@
 <body>
 <center>
     <section class="header">
+
         <nav>
             <h3 style="
                 color: aliceblue;
                 text-align: left;
                 margin-top: 80px;
                 font-size: 22px;
-                margin-left: 0px;
+                margin-left: 0.12px;
                 font-weight: bold;
                 font-family: 'Nanum Gothic';
 ">예술을 위한<br><br>아티스트 소셜 네트워크</h3><br>
-
 
 
         </nav>
@@ -73,7 +76,7 @@ color: #ffffff;">4RT</h1>
 
 
         <hr style="width: 316px;
-height: 0px;
+height: px;
 margin: 39px 37px 14px;
 background-color: #aaaaaa;">
 
@@ -272,7 +275,6 @@ color: #ffffff;">#설치 #시각 #다원예술</p>
 
 
 
-
         <img src="../static/css/img/미술.png" alt="" style="width: 154px;
 height: 154px;
 margin: 0 0 10px;
@@ -308,6 +310,7 @@ float: left;
 color: #ffffff;">#패션아트</p>
 
 
+        <<<<<<< HEAD
 
 
         <img src="../static/css/img/공예.png" alt="" style="width: 154px;
@@ -436,15 +439,6 @@ object-fit: contain;">
 
 
 
-
-
-
-
-
-
-
-
-
     </section>
     <a src=" alt="" style="width: 154px;
     height: 154px;
@@ -452,6 +446,24 @@ object-fit: contain;">
     object-fit: contain;
     color: white;
     ">forever 4rt</a>
+
+
+
+
+</center>
+
+
+
+
+
+
+</section>
+<a src=" alt="" style="width: 154px;
+height: 154px;
+margin: 0 0 10px 42px;
+object-fit: contain;
+color: white;
+">forever 4rt</a>
 
 
 
