--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-<center>
+<div style="text-align: center;">
     <section class="header">
 
         <nav>
@@ -458,7 +458,7 @@ object-fit: contain;">
 
 
 
-</center>
+</div>
 
 
 
