--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -65,10 +65,42 @@
          letter-spacing: normal;
          text-align: left;
          color: #ffffff;">4RT를 이용하기 위해서 인스타그램 계정을 등록하셔야 합니다.</p>
+         
+         <img src="../static/css/img/인스타그램.png" alt="" style=" width: 350px;
+         height: 125px;
+         margin: 10px 1px 15px 18px;
+         object-fit: contain;">
+         
+
+       
     <center>
-   
+        <p style="width: 250px;
+        height: 15px;
+        margin: 0 5px 0 20px;
+        font-family: 'NanumGothic';
+        font-size: 13px;
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: normal;
+        letter-spacing: normal;
+        text-align: left;
+        color: #ffffff;">인스타드램 계정 등록하고 프로필 작성하기</p><br>
+        <img src="../static/css/img/chevrons-down_2021-05-23/chevrons-down@3x.png" alt=""
+        style="width: 18px;
+        height: 12px;
+        margin: 2px 0 1px 5px;
+        object-fit: contain;
+        ">
+<br>
+        <button style="width: 350px; height: 60px;">   <img src="../static/css/img/Button 인스타그램 계정등록 _2021-05-23/Button 인스타그램 계정등록 @3x.png" alt=""style=" width: 350px;
+            height: 60px;
+            margin: 15px 1px 145px 0;
+            object-fit: contain;"></button>
+     
+
+
         <h2 th:text = "${dd}"></h2> <!--dd를 회원가입으로-->
-        
 
 
 
