--- a/src/main/resources/templates/EditMyProfile.html
+++ b/src/main/resources/templates/EditMyProfile.html
@@ -24,7 +24,7 @@
 <body style="background-color: white; max-width: 390px;">
     <p style="width: 140px;
     height: 25px;
-    margin: 0 20px 22px 196px;
+    margin: 20px 20px 22px 196px;
     font-family: NanumGothic;
     font-size: 22px;
     font-weight: bold;
