--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0 0 55px 0;
+    margin: 13px 0 55px 0;
 }
 
 .nav {
@@ -42,3 +42,23 @@ body {
 .nav__icon {
     font-size: 18px;
 }
+input {
+    background-image: url(https://cdn1.iconfinder.com/data/icons/hawcons/32/698627-icon-111-search-256.png);
+    background-position: px center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    border: 1px solid #ccc;
+
+    padding: 5px 5px;
+    text-indent: 40px;
+    
+    width: 120px;
+}
+
+input:focus {
+    background-image: none;
+    background-position: -10px center;
+    text-indent: 0;
+    width: 50%;
+}
+
