--- a/src/main/resources/templates/EditMyProfile.html
+++ b/src/main/resources/templates/EditMyProfile.html
@@ -141,7 +141,7 @@ margin: 9px 20px 303px 10px;
 background-color: #000000;">
 
 <nav class="nav">
-    <a href="./home_real.html" class="nav__link">
+    <a href="./home.html" class="nav__link">
       <span class="nav__text"><img src="../static/css/img/home@3x.png" alt="" style="width: 18px;
         height: 20px;
         object-fit: contain;"></span>
