--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,116 +1,33 @@
 <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>test</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
+        <link rel="stylesheet" href="../static/css/home.css">
+    </head>
+    <body>
+        
+        <nav class="navbar">
+            <h1 class="logo">4rtist</h1>
+            <ul class="desktop">
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">services</a></li>
+                <li><a href="#">projects</a></li>
+                <li><a class="ctn" href="#">contact us</a></li>
 
-<html xmlns="http://www.thymeleaf.org" lang="ko">
-
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="id=edge">
-    <meta name="google-signin-client_id" content="472013528031-d4ir5hi3gtjfnmi91telttj4h2das46v.apps.googleusercontent.com">
-    <title>4RT | Home</title>
-    <link rel="stylesheet" href="../static/css/nav.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-
-    <style>
-           @import url('https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800');
-
-    </style>
-
-    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700" rel="stylesheet">
-
-</head>
-<body style="background-color: white; width: 390px;">
-    <a href="./home.html" style=" width: 71px;
-    margin: 11px 111px 13px 0px;
-    
-    padding: 10px 10px 10px 10px;
-    font-family: 'NanumGothic';
-    font-size: 30px;
-    font-weight: 800;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: #000000;
-    text-decoration:none">4rtist</a>
-  
-  <input type="search" name="search" placeholder="검색(키워드,#해시태그)" rel="search" style="width: 245px;
-  height: 40px;
-  margin: 5.5px 10px 0 -101px;
-  padding: 10px 15px 10px 10px;
-  border-radius: 25px;
-  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
-  background-color: #ffffff;
-  outline: none;
-  position: absolute;
-  ">
-
-  <img src="../static/css/img/bookmark@3x.png" alt="" style="width: 20px;
-  height: 25px;
-  margin: 13px 0 8px 148px;
-  position: absolute;
-  object-fit: contain;">
-
-<div class="w3-container" style="position: relative;">
-    <button class="w3-button w3-xlarge w3-circle w3-black" style="position: absolute; margin-top: 220px; margin-left: 290px;">+</button>
-  </div>
-    
-    
-
-<nav class="nav">
-    <a href="./home.html" class="nav__link">
-      <span class="nav__text"><img src="../static/css/img/home@3x.png" alt="" style="width: 18px;
-        height: 20px;
-        object-fit: contain;"></span>
-    </a>
-    <a href="./artist.html" class="nav__link">
-      <span class="nav__text"><img src="../static/css/img/user-plus@3x.png" alt="" style="width: 18px;
-        height: 20px;
-        object-fit: contain;"></span>
-    </a>
-    <a href="#" class="nav__link">
-      <span class="nav__text"><img src="../static/css/img/briefcase@3x.png" alt="" style="width: 18px;
-        height: 20px;
-        object-fit: contain;"></span>
-    </a>
-    <a href="#" class="nav__link">
-      <span class="nav__text"><img src="../static/css/img/icon-Bell@3x.png" alt="" style="width: 18px;
-        height: 20px;
-        object-fit: contain;"></span>
-    </a>
-    <a href="./menu.html" class="nav__link">
-      <span class="nav__text"><img src="../static/css/img/menu@3x.png" alt="" style="width: 18px;
-        height: 20px;
-        object-fit: contain;"></span>
-    </a>
-  </nav>
+            </ul>
+            <ul class="mobile-list">
+                <li><img src="../static/css/img/home@3x.png" alt=""></li>
+                <li><img src="../static/css/img/home@3x.png" alt=""></li>
+                <li><img src="../static/css/img/home@3x.png" alt=""></li>
+                <li><img src="../static/css/img/home@3x.png" alt=""></li>
+                <li><img src="../static/css/img/home@3x.png" alt=""></li>
 
 
-     
-        <h2 th:text = "${dd}"></h2> <!--dd를 회원가입으로-->
-
-
-
-        <table>
-            <tr>
-                <th>이름</th>
-                <th>아이디/이메일</th>
-                <th>핸드폰번호</th>
-                <th>성별</th> 
-                <th>등록일자</th>
-            </tr>
-
-            <tr th:each="user : ${userList}"> 
-                <td th:text="${user.userName}"></td> 
-                <td th:text="|${user.id + ' / ' + user.email}|" th:href="@{'user/'+user.id}"></td>
-                <td th:text="${user.phone}"></td> 
-                <td th:text="${user.sex == 'M' ? '남자' : '여자' }"></td>
-                <td th:text="${#dates.format(user.createDt, 'yyyy-MM-dd HH:mm')}"></td> 
-            </tr> 
-        </table>
-
-</body>
-</center>
+            </ul>
+        </nav>
+    </body>
 </html>
-
