--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -3,13 +3,15 @@
     padding: 0;
     box-sizing: border-box;
 }
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800');
+
 body{
     background-color: rgb(255, 255, 255);
 }
 a{
     text-decoration: none;
     font-size: 20px;
-    color: whitesmoke;
+    color: black;
 }
 .navbar{
     padding: 10px 20px;
@@ -20,11 +22,7 @@ a{
 
 }
 
-.ctn{
-    padding: 8px 20px;
-    background-color: rgb(131, 131, 221);
-    border-radius: 50px;
-}
+
 .navbar ul{
     flex: 1;
     text-align: right;
@@ -39,14 +37,14 @@ a{
 .logo{
     font-size: 35px;
     color: black;
+    font-family: 'Nanum Gothic';
+    font-weight: 700;
 }
 .mobile-list{
     display: none;
 }
 @media only screen and (max-width:800px){
-    .navbar .desktop{
-        display: none;
-    }
+    
     .mobile-list{
         background-color: rgb(0, 0, 0);
         display: block;
@@ -65,11 +63,16 @@ a{
         cursor: pointer;
     }
     .mobile-list li img{
-        width: 20px;
+        width: 20.5px;
         font-size: 7vmin;
         cursor: pointer;
     }
-    .mobile-list li:hover i{
-        color: rgb(131, 131, 221);
+    
+    .mobile-list a li img:hover{
+        width: 25px;
+        
     }
+    
+    
+    
 }
