--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>test</title>
+        <title>4RT - HOME</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
         <link rel="stylesheet" href="../static/css/home.css">
+        <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700" rel="stylesheet">
     </head>
     <body>
         
         <nav class="navbar">
-            <h1 class="logo">4rtist</h1>
-            <ul class="desktop">
-                <li><a href="#">home</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">services</a></li>
-                <li><a href="#">projects</a></li>
-                <li><a class="ctn" href="#">contact us</a></li>
-
-            </ul>
+            <a href="./home.html"><h1 class="logo">4rtist</h1></a>
+            
             <ul class="mobile-list">
-                <li><img src="../static/css/img/home@3x.png" alt=""></li>
-                <li><img src="../static/css/img/home@3x.png" alt=""></li>
-                <li><img src="../static/css/img/home@3x.png" alt=""></li>
-                <li><img src="../static/css/img/home@3x.png" alt=""></li>
-                <li><img src="../static/css/img/home@3x.png" alt=""></li>
+                
+                <a href="./home.html"><li><img src="../static/css/img/home@3x.png" alt=""></li></a>
+                <a href="./home.html"><li><img src="../static/css/img/user-plus@3x.png" alt=""></li></a>
+                <a href="./home.html"><li><img src="../static/css/img/briefcase@3x.png" alt=""></li></a>
+                <a href="./home.html"><li><img src="../static/css/img/icon-Bell@3x.png" alt=""></li></a>
+                <a href="./home.html"><li><img src="../static/css/img/menu@3x.png" alt=""></li></a>
+                
 
 
             </ul>
         </nav>
+        
     </body>
 </html>
