--- a/src/main/resources/templates/Artists.html
+++ b/src/main/resources/templates/Artists.html
@@ -3,19 +3,16 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>4RT - HOME</title>
+        <title>4RT - ARTISTS</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
-        <link rel="stylesheet" href="../static/css/home.css">
+        <link rel="stylesheet" href="../static/css/Artists.css">
         <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700" rel="stylesheet">
     </head>
     <body>
         
         <nav class="navbar">
             <a href="./home.html"><h1 class="logo">4rtist</h1></a>
-
-            <span class="icon"><img src="../static/css/img/icon-search.png" alt=""></span>
-            <input type="search" placeholder="검색 (키워드, #해시태그)" onfocus="this.placeholder=''" onblur="this.placeholder='검색 (키워드, #해시태그)'" name="search">            
-            <img class="bookmark"; src="../static/css/img/bookmark.png" alt="">
+            
             <ul class="mobile-list">
                 
                 <a href="./home.html"><li><img src="../static/css/img/home@3x.png" alt=""></li></a>
