--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org"> <head>
     <title>Hello</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> </head>
+    <meta name = "viewport" http-equiv="Content-Type" content="text/html; charset=UTF-8; width = deivice-width" /> </head>
 <body>
     <h1>Home</h1>
-    <a th:href="@{/login}">로그인 페이지로 이동sd</a>
+    <a th:href="@{/login}">로그인 페이지로 이동</a>
     <div class="container" ng-show="home.authenticated"> Logged in as:
         <span ng-bind="home.user"></span>
         <div>
