--- a/src/main/resources/templates/Landing_page.html
+++ b/src/main/resources/templates/Landing_page.html
@@ -20,10 +20,10 @@
             다양한 아티스트와 소통하며 예술활동을 공유하고, 협업해보세요</p>
 
 
-            <a href="javascript:;" class="btn_social" data-social="facebook"><img src="../static/css/img/icon(circle)-구글로그인@3x.png" alt="" ></a><br/><br>
-            <a href="javascript:;" class="btn_social" data-social="google"><img src="../static/css/img/naver-icon-circle@3x.png" alt="" ></a><br/><br>
-            <a href="javascript:;" class="btn_social" data-social="kakao"><img src="../static/css/img/icon(circle)-Facebook@3x.png" alt="" ></a><br/><br>
-            <a href="javascript:;" class="btn_social" data-social="naver"><img src="../static/css/img/icon(circle)-카카오@3x.png" alt="" ></a><br/>
+            <a href="javascript:;" class="btn_social" data-social="google"><img src="../static/css/img/Button-구글로그인@3x.png" alt="" ></a><br/><br>
+            <a href="javascript:;" class="btn_social" data-social="facebook"><img src="../static/css/img/Button-Facebook로그인@3x.png" alt="" ></a><br/><br>
+            <a href="javascript:;" class="btn_social" data-social="naver"><img src="../static/css/img/Button-네이버로그인@3x.png" alt="" ></a><br/><br>
+            <a href="javascript:;" class="btn_social" data-social="kakao"><img src="../static/css/img/Button-카카오로그인@3x.png" alt="" ></a><br/>
             <br>
             <script>
                 let socials = document.getElementsByClassName("btn_social");
