무용img가 해쉬태그 무용으로 바뀌어있어서, 위에 무용사진에 그게 올라가져있네; 그래서 위 사진은 dancer로하고 해쉬태그 무용은 무용으로함. 그거만 수정했음. landingpage에서

--- a/src/main/resources/templates/Landing_page.html
+++ b/src/main/resources/templates/Landing_page.html
@@ -53,7 +53,7 @@
             <p class="sotong">음악, 무용, 미술, 전통, 다원 등 다양한 분야의 예술인들과
                 예술활동을 공유하며 소통해보세요</p>
 
-            <img src="../static/css/img/무용.png" alt="" class="leftimg">
+            <img src="../static/css/img/dancer@3x.png" alt="" class="leftimg">
             <p class="leftmal">#무용 #발레 #안무가</p>
             <img src="../static/css/img/첼로.png" alt="" class="rightimg">
             <p class="rightmal">#클래식 #첼로 #현대음악</p>
