인스타그램 클라이언트 id,secret 감추기,insta 인증 최초 시작 url back으로 옮김

--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -19,7 +19,7 @@
             <img src="../static/css/img/chevrons-down_2021-05-23/chevrons-down@3x.png" alt="" class="down">
 
         </p>
-        <a href="https://api.instagram.com/oauth/authorize?client_id=213487120598037&redirect_uri=https://localhost:8443/insta_conn_success&scope=user_profile&response_type=code"><img src="../static/css/img/Button 인스타그램 계정등록 @3x.png" alt="" class="in"></a>
+        <a href="/insta_request"><img src="../static/css/img/Button 인스타그램 계정등록 @3x.png" alt="" class="in"></a>
         
         <p class="busy">비즈니스 회원</p>
         <hr class="first">
