테스트 환경 구축위한 controller 수정 및 게시판 관련 html 파일 템플릿 추가(수정이 필요함)

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,7 +31,10 @@
 
 
             </ul>
+
         </nav>
-        
+        <p class="lead">회원 기능</p> <p>
+            <a class="btn btn-lg btn-secondary" href="./board.html">게시판으로</a>
+       </p>
     </body>
 </html>
