--- a/src/main/resources/templates/board.html
+++ b/src/main/resources/templates/board.html
@@ -1,17 +1,19 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header" />
+<head th:replace="fragments/header :: header">
+    <title>Hello</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
 <body>
 <div class="container">
-    <div th:replace="fragments/bodyHeader :: bodyHeader"/>
-    <form th:action="@{/postings/new}" th:object="${form}" method="post">
-        <div class="form-group">
-            <label th:for="name">제목</label>
-            <input type="text" th:field="*{title}" class="form-control"
-                   placeholder="제목을 입력하세요">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    <div th:replace="fragments/bodyHeader :: bodyHeader" />
+    <div class="jumbotron"> <h1>게시판</h1>
+        <p class="lead">글 기능</p>
+        <p>
+            <a class="btn btn-lg btn-secondary" href="/api/posting/news/new">글 작성</a>
+            <a class="btn btn-lg btn-secondary" href="/api/postings">글 목록</a>
+        </p>
+    </div>
 </div>
 </body>
 </html>
