싹다 새로할 것임. css부분은 html이 좀 만들어진 후에 처리를 할 예정. 현재는 보이는 바와 같이 폴더별로 만들고 그 안에h html 하나씩, 그리고 static 파일에 css 하나씩 만들기만 해놓은 상태임

--- a/src/main/resources/templates/Landing_page.html
+++ b/src/main/resources/templates/Landing_page.html
@@ -9,22 +9,21 @@
         <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700" rel="stylesheet">
     </head>
     <body>
-        <h1 class="art">예술을 위한 아티스트 소셜 네트워크</h1>
-        
-        <hr style="width: 360px;
-        height: 2px;
-        margin: 19px 0 18px 20px;
-        background-color: #ededed;">
-        <h1 class="logo">4RT</h1>
-        <p class="rt">예술과 관련된 다양한 사람들을 만날 수 있는 <b>4RT</b> <br>
-            다양한 아티스트와 소통하며 예술활동을 공유하고, 협업해보세요</p>
-
-
+        <div class="landing_page">
+            <p class="landing_page_text1">
+                예술을 위한<br> 아티스트 소셜 네트워크
+            </p>
+            <hr class="landing_page_line1">
+            <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/590A63B6-D48D-4C14-A08B-2DCA079DB32D.png" alt="" class="landing_page_logo">
+            <p class="landing_page_text2">
+                예술과 관련된 다양한 사람들을 만날 수 있는 <b>포아티스트</b>,<br>
+                다양한 아티스트와 소통하며 예술활동을 공유하고, 협업해보세요.
+            </p>
+            
             <a href="javascript:;" class="btn_social" data-social="google"><img src="../static/css/img/Button-구글로그인@3x.png" alt="" ></a><br/><br>
             <a href="javascript:;" class="btn_social" data-social="facebook"><img src="../static/css/img/Button-Facebook로그인@3x.png" alt="" ></a><br/><br>
             <a href="javascript:;" class="btn_social" data-social="naver"><img src="../static/css/img/Button-네이버로그인@3x.png" alt="" ></a><br/><br>
             <a href="javascript:;" class="btn_social" data-social="kakao"><img src="../static/css/img/Button-카카오로그인@3x.png" alt="" ></a><br/>
-            <br>
             <script>
                 let socials = document.getElementsByClassName("btn_social");
                 for(let social of socials) {
@@ -35,74 +34,41 @@
                 }
             </script>
 
-            <hr style="width: 316px;
-            height: 2px;
-            margin-top: 39px;
-            margin-left: 37px;
-            margin-right: 37px;
-            margin-bottom: 14px;
-            background-color: #aaaaaa;">
-
-            <p class="rrt">회원가입 시 <a href="">
-                이용약관</a>  및 <a href="">
-                    개인정보처리방침
-                </a>에 동의하게됩니다.</p>
-            <img src="../static/css/img/ICON_2021-05-19/ICON@3x.png" alt="" class="globe">
-
-            <p class="underglobe">아티스트 소셜 네트워크</p>
-            <p class="sotong">음악, 무용, 미술, 전통, 다원 등 다양한 분야의 예술인들과
-                예술활동을 공유하며 소통해보세요</p>
-
-            <img src="../static/css/img/dancer@3x.png" alt="" class="leftimg">
-            <p class="leftmal">#무용 #발레 #안무가</p>
-            <img src="../static/css/img/첼로.png" alt="" class="rightimg">
-            <p class="rightmal">#클래식 #첼로 #현대음악</p>
-
-            <img src="../static/css/img/댄스.png" alt="" class="leftimg">
-            <p class="leftmal">#스트리트 #댄스</p>
-
-            <img src="../static/css/img/싱어송라이터.png" alt="" class="rightimg">
-            <p class="rightmal">#싱어송라이터 #인디</p>
-
-            <img src="../static/css/img/작곡.png" alt="" class="leftimg">
-            <p class="leftmal">#작곡 #편곡 #지휘 #영상작곡</p>
-
-            <img src="../static/css/img/거문고.png" alt="" class="rightimg">
-            <p class="rightmal">#전통예술 #국악 #거문고</p>
-
-            <img src="../static/css/img/전자음악.png" alt="" class="leftimg">
-            <p class="leftmal">#전자음악 #사운드디자인</p>
-
-            <img src="../static/css/img/설치.png" alt="" class="rightimg">
-            <p class="rightmal">#설치 #시각 #다원예술</p>
-
-            <img src="../static/css/img/미술.png" alt="" class="leftimg">
-            <p class="leftmal">#미술 #페인팅 #특수분장</p>
-
-            <img src="../static/css/img/패션아트.png" alt="" class="rightimg">
-            <p class="rightmal">#패션아트</p>
-
-            <img src="../static/css/img/공예.png" alt="" class="leftimg">
-            <p class="leftmal">#공예 #조각 #소품</p>
-
-            <img src="../static/css/img/영상아트.png" alt="" class="rightimg">
-            <p class="rightmal">#영상아트 #포토그래퍼</p>
-
-            <img src="../static/css/img/감독.png" alt="" class="leftimg">
-            <p class="leftmal">#감독 #연출</p>
-
-            <img src="../static/css/img/작가.png" alt="" class="rightimg">
-            <p class="rightmal">#작가 #스토리 #시나리오</p>
-
-            
-            <div class="white">
-                <img src="../static/css/img/협업 앤 팀 빌딩.png" alt="" class="team">
-                <img src="../static/css/img/해시태그검색_2021-05-20/해시태그검색@3x.png" alt="" class="hash">
-                <img src="../static/css/img/키워드검색_2021-05-20/키워드검색@3x.png" alt="" class="key">
-                <img src="../static/css/img/게시글업로드_2021-05-20/게시글업로드@3x.png" alt="" class="post">
-            
+            <hr class="landing_page_line2">
+            <p class="landing_page_text3">
+                회원가입 시 <a href="">이용약관</a> 
+                및
+                <a href="">개인정보처리방침</a>에 동의하게됩니다.
+            </p>
+            <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/1C93569D-1141-4326-91EE-FADA88605E7E.svg" alt="" class="lading_page_globe">
+            <p class="landing_page_text4">
+                아티스트 소셜 네트워크
+            </p>
+            <p class="landing_page_text2">
+                음악, 무용, 미술, 전통, 다원 등 다양한 분야의 예술인들과<br>
+                예술활동을 공유하며 소통해보세요.
+            </p>
+            <div class="landing_page_img">
+                <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/F573BC41-BC91-4F3C-A432-AC81E9D8603F.png" alt="">
+                <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/F573BC41-BC91-4F3C-A432-AC81E9D8603F.png" alt="">
+                <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/F573BC41-BC91-4F3C-A432-AC81E9D8603F.png" alt="">
+                <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/F573BC41-BC91-4F3C-A432-AC81E9D8603F.png" alt="">
+                <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/F573BC41-BC91-4F3C-A432-AC81E9D8603F.png" alt="">
+                <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/F573BC41-BC91-4F3C-A432-AC81E9D8603F.png" alt="">
+                <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/F573BC41-BC91-4F3C-A432-AC81E9D8603F.png" alt="">
+                <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/F573BC41-BC91-4F3C-A432-AC81E9D8603F.png" alt="">
+                <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/F573BC41-BC91-4F3C-A432-AC81E9D8603F.png" alt="">
+                <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/F573BC41-BC91-4F3C-A432-AC81E9D8603F.png" alt="">
+                <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/F573BC41-BC91-4F3C-A432-AC81E9D8603F.png" alt="">
+                <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/F573BC41-BC91-4F3C-A432-AC81E9D8603F.png" alt="">
+                <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/F573BC41-BC91-4F3C-A432-AC81E9D8603F.png" alt="">
+                <img src="https://cdn.zeplin.io/609bad0ebfc228be481a98d2/assets/F573BC41-BC91-4F3C-A432-AC81E9D8603F.png" alt="">
             </div>
-            <p style="margin-top: 194px;">4rt</p>
+        </div>
+        
+            
+
+            
         
     </body>
 </html>
